--- a/index.html
+++ b/index.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Landing Page Interativa</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-  <section class="imagem" id="img01">
-    <h1 class="delay">LGBTQIA+ Brazil Sensations</h1>
-    <h5 class="delay">A New IGLTA Partner</h5>
-    <section class="logos" >
-    <img src="images/IGTLA.png" alt="" id="logo-igtla" class="delay">
-    </section>
-  </section>
-
-  <main class="main">
-    <section class="quem-somos">
-      <div id="p1">
-        <h2>QUEM SOMOS ?</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam magnam quis quidem veniam voluptatum rerum eligendi neque suscipit laudantium blanditiis. Sequi inventore nisi veniam nobis? Qui eius officia nemo non.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magnam quas consequatur repudiandae tenetur numquam aspernatur, labore ratione minima ipsum voluptas. Accusamus voluptas nihil maiores tenetur nulla sequi? Rerum, numquam.</p>
-        <p>Nemo, modi facilis? Nihil sit, aperiam modi facilis libero iure ratione, nisi at accusamus quis laborum perspiciatis corrupti provident nesciunt eaque necessitatibus, reiciendis fugiat ducimus. Recusandae illum enim corrupti neque.</p>
-        <p>Fuga recusandae expedita possimus culpa repudiandae sapiente temporibus architecto eius maxime cumque? Voluptas aperiam eum nobis harum minus alias iure ducimus odit nesciunt provident consequuntur dolores, adipisci at labore illo.</p>
-        <p>In pariatur veniam aperiam unde, laudantium voluptatum illum repudiandae eum! Porro natus, est corporis, harum cupiditate, error odio animi vitae at deserunt non veritatis odit. Voluptas non aliquid rerum illum.</p>
-        <p>Sed nulla accusamus molestias aut quas a. Accusamus molestiae sequi nesciunt vero. Hic, magnam dolorum facilis non debitis, veritatis numquam quia eos odio, laborum ducimus neque eum corrupti ab dolores.</p>
-      </div>
-      <img src="images/img-quem.jpg" alt="" id="p2">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page Interativa</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="imagem" id="img01">
+      <h1 class="delay">LGBTQIA+ Brazil Sensations</h1>
+      <h5 class="delay">A New IGLTA Partner</h5>
+      <section class="logos">
+        <img src="images/IGTLA.png" alt="" id="logo-igtla" class="delay" />
+      </section>
     </section>
 
-    <div class="divisoria"></div>
-
-    <section class="mainCards">
-      <div class="card" id="rainbow">
-        <img src="images/rio.jpg" alt="imagem aqui">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. .</p>
-        <button>clique</button>
-      </div>
-
-      <div class="flip-container">
-        <div class="flipper">
-          
-          <!-- Frente: imagem 1 -->
-          <div class="front" style="background-image: url('images/rio.jpg');">
-            <h3 class="titulo-card">SUDESTE</h3>
-          </div>
-
-          <!-- Verso: imagem 2 + botão -->
-          <div class="back" style="background-image: url('images/img-quem.jpg');">
-            <button class="back-button">clique aqui</button>
-          </div>
-
+    <main class="main">
+      <section class="quem-somos">
+        <div id="p1">
+          <h2>QUEM SOMOS ?</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam magnam quis quidem veniam voluptatum rerum eligendi neque suscipit laudantium blanditiis. Sequi inventore nisi veniam nobis? Qui eius officia nemo non.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magnam quas consequatur repudiandae tenetur numquam aspernatur, labore ratione minima ipsum voluptas. Accusamus voluptas nihil maiores tenetur nulla sequi? Rerum, numquam.</p>
+          <p>Nemo, modi facilis? Nihil sit, aperiam modi facilis libero iure ratione, nisi at accusamus quis laborum perspiciatis corrupti provident nesciunt eaque necessitatibus, reiciendis fugiat ducimus. Recusandae illum enim corrupti neque.</p>
+          <p>Fuga recusandae expedita possimus culpa repudiandae sapiente temporibus architecto eius maxime cumque? Voluptas aperiam eum nobis harum minus alias iure ducimus odit nesciunt provident consequuntur dolores, adipisci at labore illo.</p>
+          <p>In pariatur veniam aperiam unde, laudantium voluptatum illum repudiandae eum! Porro natus, est corporis, harum cupiditate, error odio animi vitae at deserunt non veritatis odit. Voluptas non aliquid rerum illum.</p>
+          <p>Sed nulla accusamus molestias aut quas a. Accusamus molestiae sequi nesciunt vero. Hic, magnam dolorum facilis non debitis, veritatis numquam quia eos odio, laborum ducimus neque eum corrupti ab dolores.</p>
         </div>
-      </div>
+        <img src="images/img-quem.jpg" alt="" id="p2" />
+      </section>
 
-</div>
-      <div class="card">
-        <img src="images/bs.png" alt="imagem aqui">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. .</p>
-        <button>clique</button>
-      </div>
+      <div class="divisoria"></div>
 
-      <div class="card">
-        <img src="images/bs.png" alt="imagem aqui">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. .</p>
-        <button>clique</button>
-      </div>
+      <section class="mainCards">
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front" style="background-image: url('images/1.png');"></div>
+            <div class="back" style="background-image: url('images/2.png');">
+              <button class="back-button">clique aqui</button>
+            </div>
+          </div>
+        </div>
 
-      <div class="card">
-        <img src="images/bs.png" alt="imagem aqui">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. .</p>
-        <button>clique</button>
-      </div>
-    </section>
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front" style="background-image: url('images/3.png');"></div>
+            <div class="back" style="background-image: url('images/4.png');">
+              <button class="back-button">clique aqui</button>
+            </div>
+          </div>
+        </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quia autem aut animi eum consequuntur nesciunt minima magnam beatae obcaecati alias perferendis eius enim? Repudiandae distinctio nesciunt dignissimos dolores ducimus.</p>
-  </main>
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front" style="background-image: url('images/5.png');"></div>
+            <div class="back" style="background-image: url('images/6.png');">
+              <button class="back-button">clique aqui</button>
+            </div>
+          </div>
+        </div>
 
-  <script src="script.js"></script>
-</body>
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front" style="background-image: url('images/7.png');"></div>
+            <div class="back" style="background-image: url('images/8.png');">
+              <button class="back-button">clique aqui</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front" style="background-image: url('images/9.png');"></div>
+            <div class="back" style="background-image: url('images/10.png');">
+              <button class="back-button">clique aqui</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quia autem aut animi eum consequuntur nesciunt minima magnam beatae obcaecati alias perferendis eius enim? Repudiandae distinctio nesciunt dignissimos dolores ducimus.
+      </p>
+    </main>
+
+    <script src="script.js"></script>
+  </body>
 </html>
