correção nos estilos da seção quem somos

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <p>In pariatur veniam aperiam unde, laudantium voluptatum illum repudiandae eum! Porro natus, est corporis, harum cupiditate, error odio animi vitae at deserunt non veritatis odit. Voluptas non aliquid rerum illum.</p>
           <p>Sed nulla accusamus molestias aut quas a. Accusamus molestiae sequi nesciunt vero. Hic, magnam dolorum facilis non debitis, veritatis numquam quia eos odio, laborum ducimus neque eum corrupti ab dolores.</p>
         </div>
-        <img src="images/img-quem.jpg" alt="" id="p2" />
+        <img src="images/mapa.jpg" alt="" id="p2" />
       </section>
 
-      <div class="divisoria"></div>
+      
 
       <section class="mainCards">
         <div class="flip-container">
