nova seção de titulo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <img src="images/mapa.jpg" alt="" id="p2" />
       </section>
 
-      
+      <section class="experiencias">
+        <h1>Descubra mais sobre nossas experiencias</h1>
+      </section>
 
       <section class="mainCards">
         <div class="flip-container">
