adição de novas paginas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="images/mapa.jpg" alt="" id="p2" />
       </section>
 
-      <section class="experiencias">
+      <section class="secao">
         <h1>Descubra mais sobre nossas experiencias</h1>
       </section>
 
@@ -38,7 +38,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/1.png');"></div>
             <div class="back" style="background-image: url('images/2.png');">
-              <button class="back-button">clique aqui</button>
+              <a href="regioes/sudeste.html" class="back-button" >clique aqui</a>
             </div>
           </div>
         </div>
@@ -47,7 +47,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/3.png');"></div>
             <div class="back" style="background-image: url('images/4.png');">
-              <button class="back-button">clique aqui</button>
+              <a href="regioes/centrooeste.html" class="back-button" >clique aqui</a>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/5.png');"></div>
             <div class="back" style="background-image: url('images/6.png');">
-              <button class="back-button">clique aqui</button>
+              <a href="regioes/sul.html" class="back-button" >clique aqui</a>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/7.png');"></div>
             <div class="back" style="background-image: url('images/8.png');">
-              <button class="back-button">clique aqui</button>
+              <a href="regioes/nordeste.html" class="back-button" >clique aqui</a>
             </div>
           </div>
         </div>
@@ -74,11 +74,15 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/9.png');"></div>
             <div class="back" style="background-image: url('images/10.png');">
-              <button class="back-button">clique aqui</button>
+              <a href="regioes/norte.html" class="back-button" >clique aqui</a>
             </div>
           </div>
         </div>
       </section>
+
+      <footer class="secao">
+        <h5>entre em contato</h5>
+      </footer>
 
     </main>
 
