--- a/regioes/sudeste.html
+++ b/regioes/sudeste.html
@@ -14,58 +14,31 @@
             <p>cabeçalho</p>
         </div>
 
-        <div id="content">
-            <div class="slides">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-
-                <!-- Indicadores -->
-                <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-
-                <!-- Slides -->
-                <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/sudestespbandeira.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>Primeiro Rótulo de Slide</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias soluta provident reiciendis odio iste perspiciatis nam. Quasi dolor, nesciunt doloribus minima, possimus voluptatibus praesentium sint, hic repellat ratione quis id.</p>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">
-                    <img src="images/rsudeste.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>Segundo Rótulo de Slide</h5>
-                    <p>Descrição opcional do segundo slide.</p>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="images/rsudeste.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>Terceiro Rótulo de Slide</h5>
-                    <p>Mais uma descrição opcional.</p>
-                    </div>
-                </div>
-                </div>
-
-                <!-- Botões de navegação -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-                </button>
-
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Próximo</span>
-                </button>
-
-      </div>
+        <div id="sidebar">
+            <div class="itens-sidebar">
+                <h2>titulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quidem ratione obcaecati a veniam molestiae alias totam non iure omnis minima esse quaerat natus, at laborum. Provident asperiores sit aspernatur!</p>
+                <h2>titulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quidem ratione obcaecati a veniam molestiae alias totam non iure omnis minima esse quaerat natus, at laborum. Provident asperiores sit aspernatur!</p>
+                <h2>titulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quidem ratione obcaecati a veniam molestiae alias totam non iure omnis minima esse quaerat natus, at laborum. Provident asperiores sit aspernatur!</p>
+                <h2>titulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quidem ratione obcaecati a veniam molestiae alias totam non iure omnis minima esse quaerat natus, at laborum. Provident asperiores sit aspernatur!</p>
+                <h2>titulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quidem ratione obcaecati a veniam molestiae alias totam non iure omnis minima esse quaerat natus, at laborum. Provident asperiores sit aspernatur!</p>
             </div>
-            
+
+        </div>
+
+        <div id="content">
+            <h2 class="text-center my-4">Galeria de Imagens</h2>
+            <div class="gallery">
+                <img src="images/sudeste/1.jpg" alt="img1" />
+                <img src="images/sudeste/2.jpg" alt="img1" />
+                <img src="images/sudeste/3.jpg" alt="img1" />
+                <img src="images/sudeste/4.jpg" alt="img1" />
+                <img src="images/sudeste/5.jpg" alt="img1" />
+            </div>
         </div>
 
         <div id="footer">
