correção de responsividade

--- a/regions/Southeast.html
+++ b/regions/Southeast.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sudeste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="stylesregions/styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sudeste</title>
+  <link rel="stylesheet" href="stylesregions/styles.css" />
 </head>
-
 <body class="overflow-x-hidden">
-    <div class="grid-container" id="template-areas">
-        <div id="header">
-            <img src="images/imgs-header/logo.png" alt="" id="logo">
-        </div>
-
-        <div id="sidebar">
-            <div class="itens-sidebar">
-                <h2>Orgulho e Vibração Urbana</h2>
-                <p>O Sudeste é o coração pulsante da diversidade brasileira. São Paulo é referência mundial em inclusão e celebração da diversidade: abriga a maior Parada do Orgulho LGBTQIA+ do mundo, eventos culturais queer o ano inteiro e uma vida noturna vibrante, com casas noturnas, bares e centros culturais voltados ao público LGBTQIA+. O Rio de Janeiro, com suas praias icônicas como Ipanema (Posto 9 e a bandeira arco-íris no Posto 8), combina beleza natural com um espírito livre e acolhedor. Cidades como Belo Horizonte e Vitória também crescem como destinos de hospitalidade e autenticidade queer. Aqui, orgulho é estilo de vida.</p>
-                <p>Essa efervescência cultural também se reflete nos festivais de cinema LGBTQIA+, feiras literárias, exposições de arte e projetos comunitários espalhados por toda a região. Em centros urbanos e bairros alternativos, a arte de rua, os coletivos independentes e as ocupações culturais se tornam espaços de resistência, expressão e visibilidade. No Sudeste, a diversidade não apenas é aceita — ela é celebrada, vivida e multiplicada todos os dias, em cada esquina, palco e sorriso compartilhado.</p>
-            </div>
-
-        </div>
-
-        <div id="content">
-            <div class="gallery">
-                <img src="images/SE/1.jpg" alt="img1" />
-                <img src="images/SE/2.jpg" alt="img1" />
-                <img src="images/SE/3.jpg" alt="img1" />
-                <img src="images/SE/4.jpg" alt="img1" />
-                <img src="images/SE/6.jpg" alt="img1" />
-            </div>
-        </div>
-
+  <div class="grid-container" id="template-areas">
+    <div id="headerSE">
+      <img src="images/imgs-header/logo.png" alt="Logo" id="logo" />
     </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <div id="sidebar">
+      <div class="itens-sidebar">
+        <h2>Pride and Urban Vibes</h2>
+        <p>The Southeast is the beating heart of Brazil’s diversity. São Paulo is a global reference in inclusion and celebration of diversity: it hosts the world’s largest LGBTQIA+ Pride Parade, year-round queer cultural events, and a vibrant nightlife filled with nightclubs, bars, and cultural centers focused on the LGBTQIA+ community. Rio de Janeiro, with its iconic beaches like Ipanema (Posto 9 and the rainbow flag at Posto 8), blends natural beauty with a free and welcoming spirit. Cities like Belo Horizonte and Vitória are also emerging as destinations of queer hospitality and authenticity. Here, pride is a way of life.</p>
+        <p>This cultural effervescence is also reflected in LGBTQIA+ film festivals, literary fairs, art exhibitions, and community projects spread across the region. In urban centers and alternative neighborhoods, street art, independent collectives, and cultural occupations become spaces of resistance, expression, and visibility. In the Southeast, diversity is not only accepted — it is celebrated, lived, and multiplied every day, in every corner, stage, and shared smile.</p>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="gallery">
+        <img src="images/SE/1.jpg" alt="img1" />
+        <img src="images/SE/2.jpg" alt="img2" />
+        <img src="images/SE/3.jpg" alt="img3" />
+        <img src="images/SE/4.jpg" alt="img4" />
+        <img src="images/SE/6.jpg" alt="img5" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
