ajuste nas imagens e textos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page Interativa</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="imagem" id="img01">
@@ -18,13 +21,17 @@
     <main class="main">
       <section class="quem-somos">
         <div id="p1">
-          <h2>QUEM SOMOS ?</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam magnam quis quidem veniam voluptatum rerum eligendi neque suscipit laudantium blanditiis. Sequi inventore nisi veniam nobis? Qui eius officia nemo non.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magnam quas consequatur repudiandae tenetur numquam aspernatur, labore ratione minima ipsum voluptas. Accusamus voluptas nihil maiores tenetur nulla sequi? Rerum, numquam.</p>
-          <p>Nemo, modi facilis? Nihil sit, aperiam modi facilis libero iure ratione, nisi at accusamus quis laborum perspiciatis corrupti provident nesciunt eaque necessitatibus, reiciendis fugiat ducimus. Recusandae illum enim corrupti neque.</p>
-          <p>Fuga recusandae expedita possimus culpa repudiandae sapiente temporibus architecto eius maxime cumque? Voluptas aperiam eum nobis harum minus alias iure ducimus odit nesciunt provident consequuntur dolores, adipisci at labore illo.</p>
-          <p>In pariatur veniam aperiam unde, laudantium voluptatum illum repudiandae eum! Porro natus, est corporis, harum cupiditate, error odio animi vitae at deserunt non veritatis odit. Voluptas non aliquid rerum illum.</p>
-          <p>Sed nulla accusamus molestias aut quas a. Accusamus molestiae sequi nesciunt vero. Hic, magnam dolorum facilis non debitis, veritatis numquam quia eos odio, laborum ducimus neque eum corrupti ab dolores.</p>
+          <h2>ABOUT US.</h2>
+          <p>We Are Brazil Sensations
+More than just a tour operator, we are specialists in creating experiences that awaken the senses, celebrate freedom, and leave lifelong memories.
+Our focus? The authentic, diverse, and vibrant Brazil — with a special affection for group travel designed for the LGBT community, where every detail is thoughtfully crafted with inclusion, joy, and safety.
+
+We believe that traveling in a group is the truest way to celebrate life: with shared laughter, unique discoveries, and deep connections. That’s why our itineraries combine comfort, exclusivity, and warm hospitality — with inclusive guides, LGBT-friendly accommodations, and immersive experiences that reflect the soul of each destination and the pace of each group.
+
+From vibrant cities to paradise beaches, from colorful parties to breathtaking natural landscapes — with a taste of local cuisine and culture along the way — we take care of every detail with passion and professionalism, so your group can simply enjoy the moment.
+
+With Brazil Sensations, you don’t just see Brazil.
+You experience Brazil — with authenticity, safety, and the warmth that only this country can offer.</p>
         </div>
         <img src="images/mapa.jpg" alt="" id="p2" />
       </section>
@@ -38,7 +45,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/1.png');"></div>
             <div class="back" style="background-image: url('images/2.png');">
-              <a href="regions/Southeast.html" class="back-button" >clique aqui</a>
+              <a href="regions/Southeast.html" class="back-button" >click here</a>
             </div>
           </div>
         </div>
@@ -47,7 +54,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/3.png');"></div>
             <div class="back" style="background-image: url('images/4.png');">
-              <a href="regioes/centrooeste.html" class="back-button" >clique aqui</a>
+              <a href="regions/CentralWest.html" class="back-button" >click here</a>
             </div>
           </div>
         </div>
@@ -56,7 +63,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/5.png');"></div>
             <div class="back" style="background-image: url('images/6.png');">
-              <a href="regioes/sul.html" class="back-button" >clique aqui</a>
+              <a href="regions/South.html" class="back-button" >click here</a>
             </div>
           </div>
         </div>
@@ -65,7 +72,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/7.png');"></div>
             <div class="back" style="background-image: url('images/8.png');">
-              <a href="regioes/nordeste.html" class="back-button" >clique aqui</a>
+              <a href="regions/Northeast.html" class="back-button" >click here</a>
             </div>
           </div>
         </div>
@@ -74,7 +81,7 @@
           <div class="flipper">
             <div class="front" style="background-image: url('images/9.png');"></div>
             <div class="back" style="background-image: url('images/10.png');">
-              <a href="regioes/norte.html" class="back-button" >clique aqui</a>
+              <a href="regions/North.html" class="back-button" >click here</a>
             </div>
           </div>
         </div>
