--- a/regions/CentralWest.html
+++ b/regions/CentralWest.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Central West</title>
+  <link rel="stylesheet" href="stylesregions/styles.css" />
 </head>
-<body>
-    <h1>centro oeste</h1>
+<body class="overflow-x-hidden">
+  <div class="grid-container" id="template-areas">
+    <div id="headerCO" class="header">
+      <a href="../index.html">
+        <img src="images/imgs-header/logo.png" alt="Logo" id="logo"  title="HOME PAGE"/>
+      </a> 
+    </div>
+
+    <div id="sidebar">
+      <div class="itens-sidebar">
+        <h2>Nature and LGBTQIA+ Hospitality</h2>
+        <p>In the heart of the country, the Central-West surprises with its wild nature and growing LGBTQIA+ visibility. Brasília, with its modern architecture and vibrant arts scene, is also a progressive hub with safe and welcoming spaces. The Pantanal and Chapada dos Veadeiros offer unique ecotourism experiences, ideal for those seeking reconnection with nature and alternative communities. The region attracts LGBTQIA+ travelers in search of spirituality, sustainability, and transformative experiences.</p>
+        <p>What makes the Central-West stand out is the harmony between freedom and introspection it offers. Sacred waterfalls, mystical landscapes, and holistic retreats make it a magnet for queer travelers interested in healing journeys and conscious travel. Whether meditating under the stars or joining inclusive wellness gatherings, visitors find a space where being true to oneself is part of the natural flow of life.</p>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="gallery">
+        <img src="images/CO/1.jpeg" alt="img3" />
+        <img src="images/CO/2.jpg" alt="img5" />
+        <img src="images/CO/3.webp" alt="img1" />
+        <img src="images/CO/4.jpeg" alt="img2" />
+        <img src="images/CO/5.jpg" alt="img4" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
