--- a/regions/North.html
+++ b/regions/North.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>North</title>
+  <link rel="stylesheet" href="stylesregions/styles.css" />
 </head>
-<body>
-    <h1>NORTE</h1>
+<body class="overflow-x-hidden">
+  <div class="grid-container" id="template-areas">
+    <div id="headerN" class="header">
+      <a href="../index.html">
+        <img src="images/imgs-header/logo.png" alt="Logo" id="logo"  title="HOME PAGE"/>
+      </a> 
+    </div>
+
+    <div id="sidebar">
+      <div class="itens-sidebar">
+        <h2>The Amazon and Resilient Communities</h2>
+        <p>The North region, with its rich culture and unmatched biodiversity, reveals a powerful face of LGBTQIA+ resistance and expression. In cities like Belém and Manaus, the queer scene is growing with cultural parties, social movements, and local artists who give voice to Amazonian diversity. On river cruises or immersive visits to riverside communities, travelers find warm and genuine hospitality. The Amazon is also a place of deep discoveries, where respect for diversity intertwines with connection to the land and traditions.</p>
+        <p>LGBTQIA+ tourism in the North is marked by authenticity and meaningful encounters. Whether joining community-based ecotourism experiences or exploring indigenous-led initiatives, queer travelers are welcomed into a space where cultural roots and inclusive values coexist. The region invites visitors to reflect, connect, and celebrate identity in one of the most awe-inspiring environments on Earth.</p>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="gallery">
+        <img src="images/N/1.jpg" alt="img3" />
+        <img src="images/N/2.jpg" alt="img5" />
+        <img src="images/N/3.jpg" alt="img1" />
+        <img src="images/N/4.jpg" alt="img2" />
+        <img src="images/N/5.jpg" alt="img4" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
