--- a/regions/Northeast.html
+++ b/regions/Northeast.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Northeast</title>
+  <link rel="stylesheet" href="stylesregions/styles.css" />
 </head>
-<body>
-    <h1>NORDESTE</h1>
+<body class="overflow-x-hidden">
+  <div class="grid-container" id="template-areas">
+    <div id="headerNE" class="header">
+      <a href="../index.html">
+        <img src="images/imgs-header/logo.png" alt="Logo" id="logo"  title="HOME PAGE"/>
+      </a> 
+    </div>
+
+    <div id="sidebar">
+      <div class="itens-sidebar">
+        <h2>Celebration, Ancestry, and Freedom</h2>
+        <p>The Northeast is a true celebration of life and freedom. Salvador, with its Afro-Brazilian heritage, is also a city of resistance and LGBTQIA+ pride, hosting events like Salvador Pride and inclusive Carnival blocs. Recife, Fortaleza, and João Pessoa follow this vibrant rhythm, with beaches popular among LGBTQIA+ visitors, a dynamic art scene, and culturally engaged initiatives. Pipa and Porto de Galinhas are perfect queer-friendly getaways to relax and reconnect. In the Northeast, every trip is an ode to joy, diversity, and love in all its forms.</p>
+        <p>What makes the Northeast truly unforgettable is its warm and welcoming spirit. The rhythm of samba and axé, the flavors of local cuisine, and the contagious energy of its people create an atmosphere where LGBTQIA+ travelers feel embraced and celebrated. It’s a region where cultural identity and queer expression walk hand in hand — turning every corner, beach, and festival into a vibrant tribute to inclusion and authenticity.</p>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="gallery">
+        <img src="images/NE/1.jpg" alt="img3" />
+        <img src="images/NE/2.jpg" alt="img5" />
+        <img src="images/NE/3.webp" alt="img1" />
+        <img src="images/NE/4.jpg" alt="img2" />
+        <img src="images/NE/5.jpeg" alt="img4" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
