--- a/regions/South.html
+++ b/regions/South.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>South</title>
+  <link rel="stylesheet" href="stylesregions/styles.css" />
 </head>
-<body>
-    <h1>SUL</h1>
+<body class="overflow-x-hidden">
+  <div class="grid-container" id="template-areas">
+    <div id="headerS" class="header">
+      <a href="../index.html">
+        <img src="images/imgs-header/logo.png" alt="Logo" id="logo"  title="HOME PAGE"/>
+      </a> 
+    </div>
+
+    <div id="sidebar">
+      <div class="itens-sidebar">
+        <h2>Queer Culture</h2>
+        <p>Southern Brazil offers a charming fusion of European tradition, stunning landscapes, and a growing LGBTQIA+ scene. Curitiba and Florianópolis stand out with cultural festivals, inclusive bars, and increasingly recognized diversity events. Floripa, with its lush beaches and bohemian spirit, is a hotspot for queer summer getaways. Gramado, on the other hand, blends romance and sophistication in a warm, welcoming atmosphere for LGBTQIA+ couples — perfect for romantic trips. A region for those seeking charm and connection.</p>
+        <p>Beyond its scenic beauty, the South is becoming a symbol of progress and visibility for the LGBTQIA+ community. Pride events are gaining momentum, local tourism is embracing diversity more openly, and inclusive hospitality is on the rise — from boutique hotels to LGBTQIA+-friendly guided tours. This transformation makes the region not only a picturesque destination but also a safe and affirming space for travelers of all identities.</p>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="gallery">
+        <img src="images/S/3.jpg" alt="img3" />
+        <img src="images/S/5.jpeg" alt="img5" />
+        <img src="images/S/1.webp" alt="img1" />
+        <img src="images/S/2.webp" alt="img2" />
+        <img src="images/S/4.jpg" alt="img4" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
