--- a/regions/Southeast.html
+++ b/regions/Southeast.html
@@ -8,8 +8,10 @@
 </head>
 <body class="overflow-x-hidden">
   <div class="grid-container" id="template-areas">
-    <div id="headerSE">
-      <img src="images/imgs-header/logo.png" alt="Logo" id="logo" />
+    <div id="headerSE" class="header">
+      <a href="../index.html">
+        <img src="images/imgs-header/logo.png" alt="Logo" id="logo"  title="HOME PAGE"/>
+      </a> 
     </div>
 
     <div id="sidebar">
@@ -24,9 +26,9 @@
       <div class="gallery">
         <img src="images/SE/1.jpg" alt="img1" />
         <img src="images/SE/2.jpg" alt="img2" />
-        <img src="images/SE/3.jpg" alt="img3" />
+        <img src="images/SE/3.jpeg" alt="img3" />
         <img src="images/SE/4.jpg" alt="img4" />
-        <img src="images/SE/6.jpg" alt="img5" />
+        <img src="images/SE/5.jpg" alt="img5" />
       </div>
     </div>
   </div>
