--- a/index.html
+++ b/index.html
@@ -1,92 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brazil Sensations + IGTLA</title>
+    <title>Brazil Sensations + IGLTA</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body>
-    <section class="imagem" id="img01">
-      <h1 class="delay">LGBTQIA+ Brazil Sensations</h1>
-      <h5 class="delay">A New IGLTA Partner</h5>
-      <section class="logos">
-        <img src="images/IGTLA.png" alt="" id="logo-igtla" class="delay" />
+    <section class="hero-banner" id="banner-image">
+      <h1 class="fade-in">LGBTQIA+ Brazil Sensations</h1>
+      <h5 class="fade-in">A New IGLTA Partner</h5>
+      <section class="logo-container">
+        <img src="images/IGTLA.png" alt="IGLTA Logo" id="logo-iglta" class="fade-in" />
       </section>
     </section>
 
-    <main class="main">
-      <section class="quem-somos">
-        <div id="p1">
+    <main class="main-container">
+      <section class="about-section">
+        <div id="text-content">
           <h2>ABOUT US.</h2>
-          <p>We Are Brazil Sensations
-More than just a tour operator, we are specialists in creating experiences that awaken the senses, celebrate freedom, and leave lifelong memories.
-Our focus? The authentic, diverse, and vibrant Brazil — with a special affection for group travel designed for the LGBT community, where every detail is thoughtfully crafted with inclusion, joy, and safety.
-
-We believe that traveling in a group is the truest way to celebrate life: with shared laughter, unique discoveries, and deep connections. That’s why our itineraries combine comfort, exclusivity, and warm hospitality — with inclusive guides, LGBT-friendly accommodations, and immersive experiences that reflect the soul of each destination and the pace of each group.
-
-From vibrant cities to paradise beaches, from colorful parties to breathtaking natural landscapes — with a taste of local cuisine and culture along the way — we take care of every detail with passion and professionalism, so your group can simply enjoy the moment.
-
-With Brazil Sensations, you don’t just see Brazil.
-You experience Brazil — with authenticity, safety, and the warmth that only this country can offer.</p>
+          <p>
+            We Are Brazil Sensations  
+            More than just a tour operator, we are specialists in creating experiences that awaken the senses, celebrate freedom, and leave lifelong memories.  
+            Our focus? The authentic, diverse, and vibrant Brazil — with a special affection for group travel designed for the LGBT community, where every detail is thoughtfully crafted with inclusion, joy, and safety.  
+            We believe that traveling in a group is the truest way to celebrate life: with shared laughter, unique discoveries, and deep connections. That’s why our itineraries combine comfort, exclusivity, and warm hospitality — with inclusive guides, LGBT-friendly accommodations, and immersive experiences that reflect the soul of each destination and the pace of each group.  
+            From vibrant cities to paradise beaches, from colorful parties to breathtaking natural landscapes — with a taste of local cuisine and culture along the way — we take care of every detail with passion and professionalism, so your group can simply enjoy the moment.  
+            With Brazil Sensations, you don’t just see Brazil.  
+            You experience Brazil — with authenticity, safety, and the warmth that only this country can offer.
+          </p>
         </div>
-        <img src="images/mapa.jpg" alt="" id="p2" />
+        <img src="images/mapa.jpg" alt="Brazil Map" id="image-map" />
       </section>
 
-      <section class="secao">
-        <h1>Descubra mais sobre nossas experiencias</h1>
+      <section class="section-banner">
+        <h1>Discover more about our experiences</h1>
       </section>
 
-      <section class="mainCards">
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front" style="background-image: url('images/1.png');"></div>
-            <div class="back" style="background-image: url('images/2.png');">
-              <a href="regions/Southeast.html" class="back-button" >click here</a>
+      <section class="card-section">
+        <!-- Card 1 -->
+        <div class="flip-wrapper">
+          <div class="flip-inner">
+            <div class="flip-front" style="background-image: url('images/1.png');"></div>
+            <div class="flip-back" style="background-image: url('images/2.png');">
+              <a href="regions/Southeast.html" class="flip-button">Click here</a>
             </div>
           </div>
         </div>
 
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front" style="background-image: url('images/3.png');"></div>
-            <div class="back" style="background-image: url('images/4.png');">
-              <a href="regions/CentralWest.html" class="back-button" >click here</a>
+        <!-- Card 2 -->
+        <div class="flip-wrapper">
+          <div class="flip-inner">
+            <div class="flip-front" style="background-image: url('images/3.png');"></div>
+            <div class="flip-back" style="background-image: url('images/4.png');">
+              <a href="regions/CentralWest.html" class="flip-button">Click here</a>
             </div>
           </div>
         </div>
 
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front" style="background-image: url('images/5.png');"></div>
-            <div class="back" style="background-image: url('images/6.png');">
-              <a href="regions/South.html" class="back-button" >click here</a>
+        <!-- Card 3 -->
+        <div class="flip-wrapper">
+          <div class="flip-inner">
+            <div class="flip-front" style="background-image: url('images/5.png');"></div>
+            <div class="flip-back" style="background-image: url('images/6.png');">
+              <a href="regions/South.html" class="flip-button">Click here</a>
             </div>
           </div>
         </div>
 
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front" style="background-image: url('images/7.png');"></div>
-            <div class="back" style="background-image: url('images/8.png');">
-              <a href="regions/Northeast.html" class="back-button" >click here</a>
+        <!-- Card 4 -->
+        <div class="flip-wrapper">
+          <div class="flip-inner">
+            <div class="flip-front" style="background-image: url('images/7.png');"></div>
+            <div class="flip-back" style="background-image: url('images/8.png');">
+              <a href="regions/Northeast.html" class="flip-button">Click here</a>
             </div>
           </div>
         </div>
 
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front" style="background-image: url('images/9.png');"></div>
-            <div class="back" style="background-image: url('images/10.png');">
-              <a href="regions/North.html" class="back-button" >click here</a>
+        <!-- Card 5 -->
+        <div class="flip-wrapper">
+          <div class="flip-inner">
+            <div class="flip-front" style="background-image: url('images/9.png');"></div>
+            <div class="flip-back" style="background-image: url('images/10.png');">
+              <a href="regions/North.html" class="flip-button">Click here</a>
             </div>
           </div>
         </div>
       </section>
-
     </main>
 
     <script src="script.js"></script>
